Successpkill -KILL brlttypkill -KILL brltty

--- a/Makefile.in
+++ b/Makefile.in
@@ -22,8 +22,9 @@ DRIVER_NAME = FCHAD
 DRIVER_COMMENT = For Fast CHAracter braille Displays
 DRIVER_VERSION = 
 DRIVER_DEVELOPERS = Timothy Hobbs 
+BRL_OBJS = @braille_libraries_xw@
 include $(SRC_TOP)braille.mk
 
 braille.$O:
-	$(CC) $(BRL_CFLAGS) -c $(SRC_DIR)/braille.c
+	$(CC) $(BRL_CFLAGS)  $(X_CFLAGS) -lX11 -I/usr/include/X11 -L/usr/lib/X11 -c $(SRC_DIR)/braille.c
 
